--- a/ComputerSetup/ComputerSetup.csproj
+++ b/ComputerSetup/ComputerSetup.csproj
@@ -66,6 +66,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\dev_libraries\cs\StandardLibrary.cs">
+      <Link>StandardLibrary.cs</Link>
+    </Compile>
     <Compile Include="About_Form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,7 +83,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Standard.cs" />
     <EmbeddedResource Include="About_Form.resx">
       <DependentUpon>About_Form.cs</DependentUpon>
     </EmbeddedResource>
